<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.destrostudios.amara</groupId>
    <artifactId>main</artifactId>
    <version>0.5</version>
    <packaging>pom</packaging>
    <modules>
        <module>client</module>
        <module>server</module>
        <module>shared</module>
        <module>test</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <version.amara>0.5</version.amara>
        <version.javax.activation>1.1.1</version.javax.activation>
        <version.jaxb>2.3.0</version.jaxb>
        <version.jdom>2.0.6</version.jdom>
        <version.jme3>3.2.1-stable</version.jme3>
        <version.jorbis>0.0.17.4</version.jorbis>
        <version.jsch>0.1.55</version.jsch>
        <version.junit>4.11</version.junit>
        <version.mockito>1.9.5</version.mockito>
        <version.postgresql>9.1-901-1.jdbc4</version.postgresql>
    </properties>
    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <!--Amara-->
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ai</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>applications-headless</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>applications-display</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>applications-display-ingame</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>applications-windowed</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>core</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>database</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>entitysystem</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>entitysystem-template</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>expressions</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ingame-client</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ingame-entitysystem</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ingame-maps</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ingame-network</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ingame-server</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>ingame-shared</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>master-client</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>master-client-application</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>master-network</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>master-server</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>master-server-application</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>network</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>physics</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.amara</groupId>
                <artifactId>tonegod-emitter</artifactId>
                <version>${version.amara}</version>
            </dependency>
            <!--JAXB-->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${version.jaxb}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${version.jaxb}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${version.jaxb}</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${version.javax.activation}</version>
            </dependency>
            <!--JOrbis-->
            <dependency>
                <groupId>com.googlecode.soundlibs</groupId>
                <artifactId>jorbis</artifactId>
                <version>${version.jorbis}</version>
            </dependency>
            <!--JDOM-->
            <dependency>
                <groupId>org.jdom</groupId>
                <artifactId>jdom2</artifactId>
                <version>${version.jdom}</version>
            </dependency>
            <!--jMonkeyEngine-->
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-core</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-networking</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-lwjgl</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-desktop</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-terrain</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-effects</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-niftygui</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-jogg</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <!--JSch-->
            <dependency>
                <groupId>com.jcraft</groupId>
                <artifactId>jsch</artifactId>
                <version>${version.jsch}</version>
            </dependency>
            <!--JUnit-->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <!--Mockito-->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${version.mockito}</version>
                <scope>test</scope>
            </dependency>
            <!--PostgreSQL-->
            <dependency>
                <groupId>postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${version.postgresql}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>